# triton_kserve

./: .gitignore  Makefile  README.md  inference_example.py  pyproject.toml
deployment/dev/: compose.yml
deployment/dev/triton_server/: Dockerfile
deployment/dev/triton_server/ensemble_model/: config.json
deployment/dev/triton_server/image_classifier/: config.json
deployment/dev/triton_server/preprocessor/: config.json  model.py
deployment/dev/ui/: Dockerfile
imageclassifier/: __init__.py  client.py  clients.py  model_repository_cli.py
imageclassifier/app/: app.py
imageclassifier/features/: image_preprocessor.py
tests/imageclassifier/: test_client.py  test_clients.py  test_model_repository_cli.py
tests/imageclassifier/features/: test_image_preprocessor.py
